--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <body ng-app="quick">
 	<div class="wrapper" ng-controller="aboutCtrl">
         <ul class="menu">
-            <a href="/"><li class="active">About</li></a>
-            <a href="/#!/portfolio"><li>Portfolio</li></a>
-            <a href="/#!/contact"><li>Contact</li></a>
+            <a href="#/!"><li class="active">About</li></a>
+            <a href="#!/portfolio"><li>Portfolio</li></a>
+            <a href="#!/contact"><li>Contact</li></a>
         </ul>
         <div class="aboutBox">
 		  <ng-view></ng-view>     
